about page added

--- a/Pages/html-Css.html
+++ b/Pages/html-Css.html
@@ -27,6 +27,7 @@
         <ul class="app__links">
             <a href="/"><li class="active">PORTFÖY</li></a> 
             <a href="/assets/pdf/Muhammet Ali Kayacan CV.pdf" target="_blank"><li>CV</li></a>
+            <a href="../hakkimda.html"><li>HAKKIMDA</li></a>
             <a href="../iletisim.html"><li>İLETİŞİM</li></a>
         </ul>
     </nav>
