--- a/hakkimda.html
+++ b/hakkimda.html
@@ -6,11 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Muhammet Ali Kayacan</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&amp;family=Roboto:wght@300;400;500;700&amp;display=swap"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&amp;family=Roboto:wght@300;400;500;700&amp;display=swap" media="print" onload="this.media='all'"/>
+    <link href="css/font-awesome/css/all.min.css?ver=1.2.1" rel="stylesheet">
+    <link href="css/mdb.min.css?ver=1.2.1" rel="stylesheet">
+    <link href="css/aos.css?ver=1.2.1" rel="stylesheet">
+    <link href="css/main.css?ver=1.2.1" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link href="./style.css" rel="stylesheet"></link>
-    <link href="./pages.css" rel="stylesheet"></link>
     <link href="./post_detail.css" rel="stylesheet"></link>
+    <link href="./pages.css" rel="stylesheet"></link>
+    <link href="./trans.css" rel="stylesheet"></link>
     <link rel="icon" type="image/png" href="./assets/images/mk.png"/>
 </head>
 <body>
@@ -34,12 +45,211 @@
     </ul>
     </nav>
     <main>
-    <div class="containerr">
-     <img class="imgsize" src="/assets/images/profile-1.png">
-     <p class="psize">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ullam consequuntur ipsum tenetur, repellat alias nesciunt. Quaerat magni nulla accusantium dolorum qui cum eveniet ipsam voluptatum facere quibusdam, illo debitis corrupti quas eligendi. Quae at aliquam deleniti est, vero qui quisquam quod, a laborum aperiam corrupti nihil reprehenderit numquam, libero dolore autem illo quo aliquid. Recusandae deleniti cum modi nisi a ex fuga totam quos voluptatum! Aspernatur officiis nisi maxime praesentium illum debitis, veniam vitae ab maiores, dolor doloribus pariatur recusandae quia impedit. Minus, amet nemo. Necessitatibus debitis amet porro asperiores cumque obcaecati delectus ducimus saepe quidem, unde provident mollitia optio officia sequi nesciunt facilis excepturi tenetur sint et adipisci! Molestiae nobis ut corrupti cupiditate reiciendis totam, voluptates, velit magnam, tenetur aperiam doloremque optio debitis pariatur soluta dolorum. Aliquam rem autem possimus quo provident velit obcaecati assumenda molestias sint laboriosam tenetur praesentium sit molestiae, eos adipisci enim fuga dolores dicta iste reprehenderit. Recusandae nesciunt voluptatibus corrupti error cum ullam deserunt possimus obcaecati, repellendus pariatur sint numquam ipsa quo, alias minus sequi tempore facere assumenda placeat, expedita eum illo. Facilis perspiciatis, eaque distinctio, reprehenderit ea architecto, vitae corrupti nulla unde saepe at. Nam laborum optio cum natus, repellat possimus, ab magnam dolorem vel facere id amet? Mollitia temporibus doloremque corrupti ad, necessitatibus vel ex porro dolore consequuntur, error aut odit vitae id atque dicta ut, similique odio. Dignissimos, aliquid. Natus unde perspiciatis repellat consectetur possimus provident aliquid laudantium quae explicabo quas aut similique, est illo minus animi sapiente corporis accusamus! Reiciendis.
-     </p>
+        <!-- <body class="bg-light" id="top"> -->
+            <div class="page-content">
+              <div class="container">
+        <div class="resume-container">
+          <div class="shadow-1-strong bg-white my-5" id="intro">
+            <div class="bg-info text-white">
+              <div class="cover bg-image">
+                <div class="mask" style="background-color: rgba(0, 0, 0, 0.7);backdrop-filter: blur(2px);">
+                  <div class="text-center p-5">
+                    <div class="avatar p-1"><img class="img-thumbnail shadow-2-strong" src="./assets/images/mk.png" width="160" height="160"/></div>
+                    <div class="header-bio mt-3">
+                      <div data-aos="zoom-in" data-aos-delay="0">
+                        <h2 class="h1" style="color: aliceblue;">Muhammet Ali Kayacan</h2>
+                        <p style="color: aliceblue;">Php(Laravel) Back-end Developer</p>
+                      </div>
+                      <div class="header-social mb-3 d-print-none" data-aos="zoom-in" data-aos-delay="200">
+                      </div>
+                      <div class="d-print-none"><a class="btn btn-outline-light btn-lg shadow-sm mt-1 me-3" href="/assets/pdf/Muhammet Ali Kayacan CV.pdf" data-aos="fade-right" data-aos-delay="700">CV'Yİ İNDİR</a><a class="btn btn-info btn-lg shadow-sm mt-1" href="/iletisim.html" data-aos="fade-left" data-aos-delay="700">İLETİŞİME GEÇ</a></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="shadow-1-strong bg-white my-5 p-5" id="about">
+            <div class="about-section">
+              <div class="row">
+                <div class="col-md-6">
+                  <h2 class="h2 fw-light mb-4">Hakkımda</h2>
+                  <p>Merhaba, Ben Muhammet Ali Kayacan. Php back-end alanında kendimi geliştirme konusunda tutkuluyum.<strong>Back-end developer</strong> olarak 1 yıllık iş tecrübemin yanında, kendimi geliştirmek için yapmış olduğum bir çok proje mevcuttur.</p>
+                  <p>Kastamonu Üniversitesi Bilgisayar Mühendisliği bölümünden 3.05/4 ile mezun oldum. Yapmış olduğum bazı projeleri portfölyö kısmından görebilirsiniz ayrıca github üzerinde paylaşılmış durumda. Takım çalışmasına yatkın, görevleri zamanında bitirmeye odaklı ve gelişime açık biriyim.</p>
+                </div>
+                <div class="col-md-5">
+                  <div class="row mt-2">
+                    <h2 class="h2 fw-light mb-4">Bio</h2>
+                    <div class="col-sm-5">
+                      <div class="pb-2 fw-bolder"><i class="far fa-envelope pe-2 text-muted" style="width:24px;opacity:0.85;"></i> Email</div>
+                    </div>
+                    <div class="col-sm-7">
+                      <div class="pb-2" style="font-size: 14px;">muhammedkayacan3@gmail.com</div>
+                    </div>
+                    <div class="col-sm-5">
+                      <div class="pb-2 fw-bolder"><i class="fab fa-github pe-2 text-muted" style="width:24px;opacity:0.85;"></i> Github</div>
+                    </div>
+                    <div class="col-sm-7">
+                      <div class="pb-2" style="font-size: 14px;">Muhammet15</div>
+                    </div>
+                    <div class="col-sm-5">
+                      <div class="pb-2 fw-bolder"><i class="fas fa-phone pe-2 text-muted" style="width:24px;opacity:0.85;"></i> Phone</div>
+                    </div>
+                    <div class="col-sm-7">
+                      <div class="pb-2" style="font-size: 14px;">+90 531 285 30 58</div>
+                    </div>
+                    <div class="col-sm-5">
+                      <div class="pb-2 fw-bolder"><i class="fas fa-map-marker-alt pe-2 text-muted" style="width:24px;opacity:0.85;"></i> Address</div>
+                    </div>
+                    <div class="col-sm-7">
+                      <div class="pb-2" style="font-size: 14px;">İstanbul/Avcılar 34000</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="shadow-1-strong bg-white my-5 p-5" id="skills">
+            <div class="skills-section">
+              <h2 class="h2 fw-light mb-4">Yetenekler</h2>
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="mb-3"><span class="fw-bolder">HTML</span>
+                    <div class="progress my-2 rounded" style="height: 20px">
+                      <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="100" data-aos-anchor=".skills-section" style="width: 65%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">Orta-İLERİ</div>
+                    </div>
+                  </div>
+                  <div class="mb-3"><span class="fw-bolder">CSS</span>
+                    <div class="progress my-2 rounded" style="height: 20px">
+                      <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="200" data-aos-anchor=".skills-section" style="width: 60%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">Orta</div>
+                    </div>
+                  </div>
+                  <div class="mb-3"><span class="fw-bolder">JavaScript</span>
+                    <div class="progress my-2 rounded" style="height: 20px">
+                      <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 30%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Başlangıç</div>
+                    </div>
+                  </div>
+                  <div class="mb-3"><span class="fw-bolder">Git</span>
+                    <div class="progress my-2 rounded" style="height: 20px">
+                      <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">İLERİ</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="mb-3"><span class="fw-bolder">Php</span>
+                    <div class="progress my-2 rounded" style="height: 20px">
+                      <div class="progress-bar bg-danger" role="progressbar" data-aos="zoom-in-right" data-aos-delay="400" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">İLERİ</div>
+                    </div>
+                  </div>
+                  <div class="mb-3"><span class="fw-bolder">Laravel</span>
+                    <div class="progress my-2 rounded" style="height: 20px">
+                      <div class="progress-bar bg-danger" role="progressbar" data-aos="zoom-in-right" data-aos-delay="400" data-aos-anchor=".skills-section" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">İLERİ</div>
+                    </div>
+                  </div>
+                  <div class="mb-3"><span class="fw-bolder">Python</span>
+                    <div class="progress my-2 rounded" style="height: 20px">
+                      <div class="progress-bar bg-danger" role="progressbar" data-aos="zoom-in-right" data-aos-delay="500" data-aos-anchor=".skills-section" style="width: 60%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">Orta</div>
+                    </div>
+                  </div>
+                  <div class="mb-3"><span class="fw-bolder">MySQL</span>
+                    <div class="progress my-2 rounded" style="height: 20px">
+                      <div class="progress-bar bg-danger" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">İLERİ</div>
+                    </div>
+                  </div>
+                  <div class="mb-3"><span class="fw-bolder">Redis</span>
+                    <div class="progress my-2 rounded" style="height: 20px">
+                      <div class="progress-bar bg-danger" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 30%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Başlangıç</div>
+                    </div>
+                  </div>
+                  <div class="mb-3"><span class="fw-bolder">Server</span>
+                    <div class="progress my-2 rounded" style="height: 20px">
+                      <div class="progress-bar bg-danger" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 60%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Orta</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="shadow-1-strong bg-white my-5 p-5" id="experience">
+            <div class="work-experience-section">
+              <h2 class="h2 fw-light mb-4">İş - Deneyim</h2>
+              <div class="timeline">
+                <div class="timeline-card timeline-card-info" data-aos="fade-in" data-aos-delay="0">
+                  <div class="timeline-head px-4 pt-3">
+                    <div class="h5">PHP Backend Developer <span class="text-muted h6">2U Teknoloji
+                    </span></div>
+                  </div>
+                  <div class="timeline-body px-4 pb-4">
+                    <div class="text-muted text-small mb-3">2021 Kasım - Eylül 2022</div>
+                    <div>Şirketin projelerinden olan kripto para borsası, e-ticaret ve hali hazırda
+                      var olan 2u application üzerinde verilen görevleri yaptım.(Api yazılımı,
+                      bug fix, yeni eklentiler vs.) Linux server üzerinde OKC chain node
+                      oluşturma ve MYSQL replication işlemlerinde yer aldım.
+                    </div>
+                  </div>
+                </div>
+                <div class="timeline-card timeline-card-info" data-aos="fade-in" data-aos-delay="200">
+                  <div class="timeline-head px-4 pt-3">
+                    <div class="h5">İnsan Kaynakları SAP Stajyeri <span class="text-muted h6">Mercedes-Benz Türk A.Ş</span></div>
+                  </div>
+                  <div class="timeline-body px-4 pb-4">
+                    <div class="text-muted text-small mb-3">2016 - Gönüllü Stajyer (8 Ay)</div>
+                    <div>Bilgisayara veri girme ve SAP programı ile giriş, çıkış vb. verilerinin
+                      işlenmesinde, Beyaz yaka - Mavi yaka işe alım işlemlerinde rol aldım</div>
+                  </div>
+                </div>
+                <div class="timeline-card timeline-card-info" data-aos="fade-in" data-aos-delay="400">
+                  <div class="timeline-head px-4 pt-3">
+                    <div class="h5">IT Stajyeri<span class="text-muted h6"> Kisbu Nonwoven Center</span></div>
+                  </div>
+                  <div class="timeline-body px-4 pb-4">
+                    <div class="text-muted text-small mb-3">2016 - Yazı Stajı (2 ay)           </div>
+                    <div>Şirket içinde ki teknik problemlerin çözümünde ve diğer şubedeki
+                      programlar kurulumu gibi görevlerde rol aldım.
+                      </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="shadow-1-strong bg-white my-5 p-5" id="education">
+            <div class="education-section">
+              <h2 class="h2 fw-light mb-4">Eğitim</h2>
+              <div class="timeline">
+                <div class="timeline-card timeline-card-success" data-aos="fade-in" data-aos-delay="0">
+                  <div class="timeline-head px-4 pt-3">
+                    <div class="h5">Kastamonu Üniversitesi  <span class="text-muted h6">Lisans</span></div>
+                  </div>
+                  <div class="timeline-body px-4 pb-4">
+                    <div class="text-muted text-small mb-3">2018 - 2022</div>
+                    <div>Bilgisayar Mühendisliği - 3,05/4 </div>
+                  </div>
+                </div>
+                <div class="timeline-card timeline-card-success" data-aos="fade-in" data-aos-delay="200">
+                  <div class="timeline-head px-4 pt-3">
+                    <div class="h5">İstanbul Arel Üniversitesi <span class="text-muted h6">Ön Lisans</span>          </div>
+                  </div>
+                  <div class="timeline-body px-4 pb-4">
+                    <div class="text-muted text-small mb-3">2015 - 2017</div>
+                    <div>Bilgisayar Programcılığı - 2,75/4</div>
+                  </div>
+                </div>
+                <div class="timeline-card timeline-card-success" data-aos="fade-in" data-aos-delay="400">
+                  <div class="timeline-head px-4 pt-3">
+                    <div class="h5">Avcılar Mesleki ve Teknik Anadolu Lisesi  <span class="text-muted h6">Lise</span>          </div>
+                  </div>
+                  <div class="timeline-body px-4 pb-4">
+                    <div class="text-muted text-small mb-3">2011 - 2015</div>
+                    <div>Veri Tabanı Programcılığı - 74/100</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        </div>
+        </div>
 
-    </div>
     </main>
 
 
@@ -83,5 +293,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
     <script src="./app.js" ></script>
+    <script src="scripts/mdb.min.js?ver=1.2.1"></script>
+    <script src="scripts/aos.js?ver=1.2.1"></script>
+    <script src="scripts/main.js?ver=1.2.1"></script>
 </body>
 </html>
