--- a/eng/iletisim.html
+++ b/eng/iletisim.html
@@ -28,6 +28,7 @@
     <ul class="app__links">
           <a href="../eng/index.html"><li>PORTFOLIO</li></a> 
         <a href="/assets/pdf/Muhammet Ali Kayacan CV.pdf" target="_blank"><li>CV</li></a>
+        <a href="../eng/hakkimda.html"><li style="white-space: pre;">About Me</li></a>
         <a href="../eng/iletisim.html"><li class="active">CONTACT</li></a>
         <a href="../index.html"><li> <img class="iconlan" src="../assets/images/turkey.png"/></li></a>
         <a href="./index.html"><li> <img class="iconlan active" src="../assets/images/united-kingdom.png"/></li></a>
