--- a/iletisim.html
+++ b/iletisim.html
@@ -28,6 +28,7 @@
     <ul class="app__links">
         <a href="/"><li>PORTFÖY</li></a> 
         <a href="/assets/pdf/Muhammet Ali Kayacan CV.pdf" target="_blank"><li>CV</li></a>
+        <a href="hakkimda.html"><li>HAKKIMDA</li></a>
         <a href="iletisim.html"><li class="active">İLETİŞİM</li></a>
         <a href="/"><li> <img class="iconlan active" src="./assets/images/turkey.png"/></li></a>
         <a href="./eng/index.html"><li> <img class="iconlan" src="./assets/images/united-kingdom.png"/></li></a>
