--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <ul class="app__links">
         <a href="/"><li class="active">PORTFÖY</li></a> 
         <a href="/assets/pdf/Muhammet Ali Kayacan CV.pdf" target="_blank"><li>CV</li></a>
+        <a href="hakkimda.html"><li>HAKKIMDA</li></a>
         <a href="iletisim.html"><li>İLETİŞİM</li></a>
         <a href="/"><li> <img class="iconlan active" src="./assets/images/turkey.png"/></li></a>
         <a href="./eng/index.html"><li> <img class="iconlan" src="./assets/images/united-kingdom.png"/></li></a>
