--- a/eng/hakkimda.html
+++ b/eng/hakkimda.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link href="../style.css" rel="stylesheet"></link>
     <link href="../post_detail.css" rel="stylesheet"></link>
-    <link href="../pages.css" rel="stylesheet"></link>r
+    <link href="../pages.css" rel="stylesheet"></link>
     <link href="../trans.css" rel="stylesheet"></link>
     <link rel="icon" type="image/png" href="../assets/images/mk.png"/>
 </head>
@@ -36,9 +36,9 @@
         <img class="menu__acik" src="../assets/images/acik.svg" />
 
         <ul class="app__links">
-          <a href="../eng/index.html"><li class="active">PORTFOLIO</li></a> 
+          <a href="../eng/index.html"><li>PORTFOLIO</li></a> 
           <a href="../assets/pdf/Muhammet Ali Kayacan CV.pdf" target="_blank"><li>CV</li></a>
-          <a href="../eng/hakkimda.html"><li style="white-space: pre;">About Me</li></a>
+          <a href="../eng/hakkimda.html"><li style="white-space: pre;" class="active">About Me</li></a>
           <a href="../eng/iletisim.html"><li>CONTACT</li></a>
           <a href="../index.html"><li> <img class="iconlan" src="../assets/images/turkey.png"/></li></a>
           <a href="./index.html"><li> <img class="iconlan active" src="../assets/images/united-kingdom.png"/></li></a>
@@ -53,8 +53,8 @@
             <div class="bg-info text-white">
               <div class="cover bg-image">
                 <div class="mask" style="background-color: rgba(0, 0, 0, 0.7);backdrop-filter: blur(2px);">
-                  <div class="text-center p-5">
-                    <div class="avatar p-1"><img class="img-thumbnail shadow-2-strong" src="../assets/images/mk.png" width="160" height="160"/></div>
+                  <div class="text-center p-5" id="ayar">
+                    <div class="avatar p-1"><img class="img-thumbnail shadow-2-strong" src="../assets/images/guest.png" width="160" height="160"/></div>
                     <div class="header-bio mt-3">
                       <div data-aos="zoom-in" data-aos-delay="0">
                         <h2 class="h1" style="color: aliceblue;">Muhammet Ali Kayacan</h2>
@@ -62,7 +62,7 @@
                       </div>
                       <div class="header-social mb-3 d-print-none" data-aos="zoom-in" data-aos-delay="200">
                       </div>
-                      <div class="d-print-none"><a class="btn btn-outline-light btn-lg shadow-sm mt-1 me-3" href="../assets/pdf/Muhammet Ali Kayacan CV.pdf" data-aos="fade-right" data-aos-delay="700">CV'Yİ İNDİR</a><a class="btn btn-info btn-lg shadow-sm mt-1" href="/iletisim.html" data-aos="fade-left" data-aos-delay="700">İLETİŞİME GEÇ</a></div>
+                      <div class="d-print-none"><a class="btn btn-outline-light btn-lg shadow-sm mt-1 me-3" href="../assets/pdf/Muhammet Ali Kayacan CV.pdf" data-aos="fade-right" data-aos-delay="700">DOWNLOAD CV</a><a class="btn btn-info btn-lg shadow-sm mt-1" href="/iletisim.html" data-aos="fade-left" data-aos-delay="700">CONTACT</a></div>
                     </div>
                   </div>
                 </div>
@@ -74,8 +74,8 @@
               <div class="row">
                 <div class="col-md-6">
                   <h2 class="h2 fw-light mb-4">Hakkımda</h2>
-                  <p>Merhaba, Ben Muhammet Ali Kayacan. Php back-end alanında kendimi geliştirme konusunda tutkuluyum.<strong>Back-end developer</strong> olarak 1 yıllık iş tecrübemin yanında, kendimi geliştirmek için yapmış olduğum bir çok proje mevcuttur.</p>
-                  <p>Kastamonu Üniversitesi Bilgisayar Mühendisliği bölümünden 3.05/4 ile mezun oldum. Yapmış olduğum bazı projeleri portfölyö kısmından görebilirsiniz ayrıca github üzerinde paylaşılmış durumda. Takım çalışmasına yatkın, görevleri zamanında bitirmeye odaklı ve gelişime açık biriyim.</p>
+                  <p>Hello, I am Muhammet Ali Kayacan. I am passionate about developing myself in the field of PHP back-end. In addition to my 1-year work experience as a <strong>back-end developer</strong>, there are many projects I have done to improve myself.</p>
+                  <p>I graduated from Kastamonu University Computer Engineering department with 3.05/4. You can see some of the projects I have done in the portfolio section, and they are also shared on github. I am prone to teamwork, focused on completing tasks on time and open to improvement.</p>
                 </div>
                 <div class="col-md-5">
                   <div class="row mt-2">
@@ -111,7 +111,7 @@
           </div>
           <div class="shadow-1-strong bg-white my-5 p-5" id="skills">
             <div class="skills-section">
-              <h2 class="h2 fw-light mb-4">Yetenekler</h2>
+              <h2 class="h2 fw-light mb-4">SKILLS</h2>
               <div class="row">
                 <div class="col-md-6">
                   <div class="mb-3"><span class="fw-bolder">HTML</span>
@@ -172,30 +172,30 @@
           </div>
           <div class="shadow-1-strong bg-white my-5 p-5" id="experience">
             <div class="work-experience-section">
-              <h2 class="h2 fw-light mb-4">İş - Deneyim</h2>
+              <h2 class="h2 fw-light mb-4">Experience</h2>
               <div class="timeline">
                 <div class="timeline-card timeline-card-info" data-aos="fade-in" data-aos-delay="0">
                   <div class="timeline-head px-4 pt-3">
-                    <div class="h5">PHP Backend Developer <span class="text-muted h6">2U Teknoloji
+                    <div class="h5">PHP Backend Developer <span class="text-muted h6">2U Technology
                     </span></div>
                   </div>
                   <div class="timeline-body px-4 pb-4">
-                    <div class="text-muted text-small mb-3">2021 Kasım - Eylül 2022</div>
-                    <div>Şirketin projelerinden olan kripto para borsası, e-ticaret ve hali hazırda
-                      var olan 2u application üzerinde verilen görevleri yaptım.(Api yazılımı,
-                      bug fix, yeni eklentiler vs.) Linux server üzerinde OKC chain node
-                      oluşturma ve MYSQL replication işlemlerinde yer aldım.
+                    <div class="text-muted text-small mb-3">November 2021 - September 2022</div>
+                    <div>The company's projects include cryptocurrency exchange, e-commerce and
+                      I did the tasks given on the existing 2u application. (Api software,
+                      bug fix, new plugins etc.) OKC chain node on Linux server
+                      I was involved in creation and MYSQL replication.
                     </div>
                   </div>
                 </div>
                 <div class="timeline-card timeline-card-info" data-aos="fade-in" data-aos-delay="200">
                   <div class="timeline-head px-4 pt-3">
-                    <div class="h5">İnsan Kaynakları SAP Stajyeri <span class="text-muted h6">Mercedes-Benz Türk A.Ş</span></div>
+                    <div class="h5">Human Resources SAP Intern <span class="text-muted h6">Mercedes-Benz Türk A.Ş</span></div>
                   </div>
                   <div class="timeline-body px-4 pb-4">
-                    <div class="text-muted text-small mb-3">2016 - Gönüllü Stajyer (8 Ay)</div>
-                    <div>Bilgisayara veri girme ve SAP programı ile giriş, çıkış vb. verilerinin
-                      işlenmesinde, Beyaz yaka - Mavi yaka işe alım işlemlerinde rol aldım</div>
+                    <div class="text-muted text-small mb-3">2016 - Volunteer Intern (8 Months)</div>
+                    <div>Entering data into the computer and using the SAP program to enter, exit, etc. of your data
+                      I took part in the recruitment processes of White collar - Blue collar</div>
                   </div>
                 </div>
                 <div class="timeline-card timeline-card-info" data-aos="fade-in" data-aos-delay="400">
@@ -203,9 +203,9 @@
                     <div class="h5">IT Stajyeri<span class="text-muted h6"> Kisbu Nonwoven Center</span></div>
                   </div>
                   <div class="timeline-body px-4 pb-4">
-                    <div class="text-muted text-small mb-3">2016 - Yazı Stajı (2 ay)           </div>
-                    <div>Şirket içinde ki teknik problemlerin çözümünde ve diğer şubedeki
-                      programlar kurulumu gibi görevlerde rol aldım.
+                    <div class="text-muted text-small mb-3">2016 - Writing Internship (2 months) </div>
+                    <div>In the solution of technical problems in the company and in the other branch
+                      I took part in tasks such as installing programs.
                       </div>
                   </div>
                 </div>
@@ -214,33 +214,33 @@
           </div>
           <div class="shadow-1-strong bg-white my-5 p-5" id="education">
             <div class="education-section">
-              <h2 class="h2 fw-light mb-4">Eğitim</h2>
+              <h2 class="h2 fw-light mb-4">Education</h2>
               <div class="timeline">
                 <div class="timeline-card timeline-card-success" data-aos="fade-in" data-aos-delay="0">
                   <div class="timeline-head px-4 pt-3">
-                    <div class="h5">Kastamonu Üniversitesi  <span class="text-muted h6">Lisans</span></div>
+                    <div class="h5">Kastamonu University  <span class="text-muted h6">Licence</span></div>
                   </div>
                   <div class="timeline-body px-4 pb-4">
                     <div class="text-muted text-small mb-3">2018 - 2022</div>
-                    <div>Bilgisayar Mühendisliği - 3,05/4 </div>
+                    <div>Computer engineering- 3,05/4 </div>
                   </div>
                 </div>
                 <div class="timeline-card timeline-card-success" data-aos="fade-in" data-aos-delay="200">
                   <div class="timeline-head px-4 pt-3">
-                    <div class="h5">İstanbul Arel Üniversitesi <span class="text-muted h6">Ön Lisans</span>          </div>
+                    <div class="h5">Istanbul Arel University <span class="text-muted h6">Associate Degree</span>         </div>
                   </div>
                   <div class="timeline-body px-4 pb-4">
                     <div class="text-muted text-small mb-3">2015 - 2017</div>
-                    <div>Bilgisayar Programcılığı - 2,75/4</div>
+                    <div>Computer programming - 2,75/4</div>
                   </div>
                 </div>
                 <div class="timeline-card timeline-card-success" data-aos="fade-in" data-aos-delay="400">
                   <div class="timeline-head px-4 pt-3">
-                    <div class="h5">Avcılar Mesleki ve Teknik Anadolu Lisesi  <span class="text-muted h6">Lise</span>          </div>
+                    <div class="h5">Avcılar Mesleki ve Teknik Anadolu Lisesi  <span class="text-muted h6">High school</span>          </div>
                   </div>
                   <div class="timeline-body px-4 pb-4">
                     <div class="text-muted text-small mb-3">2011 - 2015</div>
-                    <div>Veri Tabanı Programcılığı - 74/100</div>
+                    <div>Database Programming - 74/100</div>
                   </div>
                 </div>
               </div>
@@ -255,40 +255,40 @@
 
 
     <div class="footer-clean">
-        <footer>
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-sm-4 col-md-3 item">
-                        <h3>Ben Kimim</h3>
-                        <ul>
-                            <li><a>Ben Kimim</a></li>
-                            <li><a>Kariyer</a></li>
-                            <li><a href="/iletisim.html">İletişim</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-4 col-md-3 item">
-                        <h3>Hakkımda</h3>
-                        <ul>
-                            <li><a>KayacanSoftware</a></li>
-                            <li><a href="/assets/pdf/Muhammet Ali Kayacan CV.pdf">Cv</a></li>
-                            <li><a>Yardım</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-4 col-md-3 item">
-                        <h3>Kariyer</h3>
-                        <ul>
-                            <li><a >Bigisayar Mühendisi</a></li>
-                            <li><a >Yazılım</a></li>
-                            <li><a >Diller</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-3 item social"> <a href="https://www.instagram.com/muhammet.kycn/?hl=tr" target="_blank"><i class="icon ion-social-instagram"></i></a> <a ><i class="icon ion-social-facebook"></i></a><a ><i class="icon ion-social-twitter"></i></a><a ><i class="icon ion-social-snapchat"></i></a>
-                        <p class="copyright">KayacanSoftware © 2023</p>
-                    </div>
-                </div>
-            </div>
-        </footer>
-      </div>
+      <footer>
+          <div class="container">
+              <div class="row justify-content-center">
+                  <div class="col-sm-4 col-md-3 item">
+                      <h3>Who am i</h3>
+                      <ul>
+                          <li><a >Who am i</a></li>
+                          <li><a >Career</a></li>
+                          <li><a href="../eng/iletisim.html">Communication</a></li>
+                      </ul>
+                  </div>
+                  <div class="col-sm-4 col-md-3 item">
+                      <h3>About me</h3>
+                      <ul>
+                          <li><a >KayacanSoftware</a></li>
+                          <li><a href="../assets/pdf/Muhammet Ali Kayacan CV.pdf" >Cv</a></li>
+                          <li><a >Help</a></li>
+                      </ul>
+                  </div>
+                  <div class="col-sm-4 col-md-3 item">
+                      <h3>Career</h3>
+                      <ul>
+                          <li><a >Computer engineer</a></li>
+                          <li><a >Software</a></li>
+                          <li><a >Languages</a></li>
+                      </ul>
+                  </div>
+                  <div class="col-lg-3 item social"> <a href="https://www.instagram.com/muhammet.kycn/?hl=tr" target="_blank"><i class="icon ion-social-instagram"></i></a> <a ><i class="icon ion-social-facebook"></i></a><a ><i class="icon ion-social-twitter"></i></a><a ><i class="icon ion-social-snapchat"></i></a>
+                      <p class="copyright">KayacanSoftware © 2023</p>
+                  </div>
+              </div>
+          </div>
+      </footer>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
