--- a/eng/iletisim.html
+++ b/eng/iletisim.html
@@ -55,7 +55,7 @@
                   <div class="screen-body-item left">
                     <div class="app-title">
                       <span class="colors">Contact</span>
-                      <span class="colors">Us</span>
+                      <span class="colors">Me</span>
                     </div>
                     <div class="app-contact">Tel : +90 531 285 30 58</div>
                   </div>
