--- a/hakkimda.html
+++ b/hakkimda.html
@@ -53,8 +53,8 @@
             <div class="bg-info text-white">
               <div class="cover bg-image">
                 <div class="mask" style="background-color: rgba(0, 0, 0, 0.7);backdrop-filter: blur(2px);">
-                  <div class="text-center p-5">
-                    <div class="avatar p-1"><img class="img-thumbnail shadow-2-strong" src="./assets/images/mk.png" width="160" height="160"/></div>
+                  <div class="text-center p-5" id="ayar">
+                    <div class="avatar p-1"><img class="img-thumbnail shadow-2-strong" src="./assets/images/guest.png" width="160" height="160"/></div>
                     <div class="header-bio mt-3">
                       <div data-aos="zoom-in" data-aos-delay="0">
                         <h2 class="h1" style="color: aliceblue;">Muhammet Ali Kayacan</h2>
@@ -93,13 +93,13 @@
                       <div class="pb-2" style="font-size: 14px;">Muhammet15</div>
                     </div>
                     <div class="col-sm-5">
-                      <div class="pb-2 fw-bolder"><i class="fas fa-phone pe-2 text-muted" style="width:24px;opacity:0.85;"></i> Phone</div>
+                      <div class="pb-2 fw-bolder"><i class="fas fa-phone pe-2 text-muted" style="width:24px;opacity:0.85;"></i> Tel</div>
                     </div>
                     <div class="col-sm-7">
                       <div class="pb-2" style="font-size: 14px;">+90 531 285 30 58</div>
                     </div>
                     <div class="col-sm-5">
-                      <div class="pb-2 fw-bolder"><i class="fas fa-map-marker-alt pe-2 text-muted" style="width:24px;opacity:0.85;"></i> Address</div>
+                      <div class="pb-2 fw-bolder"><i class="fas fa-map-marker-alt pe-2 text-muted" style="width:24px;opacity:0.85;"></i> Adres</div>
                     </div>
                     <div class="col-sm-7">
                       <div class="pb-2" style="font-size: 14px;">İstanbul/Avcılar 34000</div>
