--- a/eng/Pages/pythontelegram.html
+++ b/eng/Pages/pythontelegram.html
@@ -28,7 +28,9 @@
 
         <ul class="app__links">
             <a href="../../eng/index.html"><li class="active">PORTFOLIO</li></a> 
+            <a href="../../eng/index.html"><li>PORTFOLIO</li></a> 
             <a href="../../assets/pdf/Muhammet Ali Kayacan CV.pdf" target="_blank"><li>CV</li></a>
+            <a href="../../eng/hakkimda.html"><li style="white-space: pre;">About Me</li></a>
             <a href="../../eng/iletisim.html"><li>CONTACT</li></a>
         </ul>
     </nav>
