--- a/Pages/pythonweather.html
+++ b/Pages/pythonweather.html
@@ -46,7 +46,7 @@
             </li>
             <li>
                 <div class="slider2">
-                    <img class="img active " src="../assets/images/python.png">
+                    <img class="img active " src="../assets/images/pythonB.png">
                     <!-- <p class="ptag" id="output"></p>   -->
                 </div>
                 
