--- a/iletisim.html
+++ b/iletisim.html
@@ -78,7 +78,7 @@
                         <textarea class="app-form-control textarea" cols="20"  rows="5" id="message" placeholder="MESAJ"  required></textarea>
                       </div>
                       <div class="app-form-group buttons">
-                        <button  id="btncancel" class="app-form-button">CANCEL</button>
+                        <button type="reset" class="app-form-button">CANCEL</button>
                         <button  id="btnsend" class="app-form-button">SEND</button>
                       </div>
                     </form>
