--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     </nav>
 
     <main>
+
         <div class="app__showcase">
             <div class="app__showcase-info">
                 <h1> Merhaba,</h1>
@@ -59,6 +60,7 @@
             </div>
             <img class="app__showcase-image" src="./assets/images/coding.png"/>
         </div>
+
         <ul class="app__blog-catogories">
             <a  href="index.html"> <li class="item active ilk">Tüm Projeler</li></a>
             <a  href="htmlcss.html"> <li  class="item">Html-Css</li> </a>
@@ -66,7 +68,7 @@
             <a  href="laravel.html"> <li class="item">Laravel</li></a>
             <a  href="python.html"> <li class="item">Python</li></a>
         </ul>
-
+<!-- <div class="shadow-1-strong bg-white"> -->
         <div class="app__listwrap">
             <div class="app_postcard">
                 <img class="postimage" src="./assets/images/laravel.png" />            
@@ -132,7 +134,8 @@
                  <a class="postlink" href="/Pages/Php-html-css.html">DETAY</a>
              </div>
         </div>
-    
+    <!-- </div>
+     -->
     </main>
   
     <div class="footer-clean">
