--- a/eng/Pages/pythonweather.html
+++ b/eng/Pages/pythonweather.html
@@ -28,7 +28,7 @@
         <ul class="app__links">
             <a href="../../eng/index.html"><li class="active">PORTFOLIO</li></a> 
             <a href="../../assets/pdf/Muhammet Ali Kayacan CV.pdf" target="_blank"><li>CV</li></a>
-            <a href="../../eng/hakkimda.html"><li style="white-space: pre;">About Me</li></a>
+            <a href="../../eng/hakkimda.html"><li style="white-space: pre;">ABOUT ME</li></a>
             <a href="../../eng/iletisim.html"><li>CONTACT</li></a>
         </ul>
     </nav>
@@ -46,7 +46,7 @@
             </li>
             <li>
                 <div class="slider2">
-                    <img class="img active " src="../../assets/images/python.png">
+                    <img class="img active " src="../../assets/images/pythonB.png">
                     <!-- <p class="ptag" id="output"></p>   -->
                 </div>
                 
