son değişiklikler yayına alma

--- a/eng/index.html
+++ b/eng/index.html
@@ -11,7 +11,7 @@
     <link href="../style.css" rel="stylesheet"></link>
     <link href="../post_detail.css" rel="stylesheet"></link>
     <link href="../pages.css" rel="stylesheet"></link>
-    <link rel="icon" type="image/png" href="../assets/images/mk.png"/>
+    <link rel="icon" type="image/png" href="../assets/images/amblem.png"/>
 </head>
 <body>
     <nav class="app__header">
