--- a/eng/hakkimda.html
+++ b/eng/hakkimda.html
@@ -156,11 +156,11 @@
                       <div class="progress-bar bg-danger" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">İLERİ</div>
                     </div>
                   </div>
-                  <div class="mb-3"><span class="fw-bolder">Redis</span>
+                  <!-- <div class="mb-3"><span class="fw-bolder">Redis</span>
                     <div class="progress my-2 rounded" style="height: 20px">
                       <div class="progress-bar bg-danger" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 30%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Başlangıç</div>
                     </div>
-                  </div>
+                  </div> -->
                   <div class="mb-3"><span class="fw-bolder">Server</span>
                     <div class="progress my-2 rounded" style="height: 20px">
                       <div class="progress-bar bg-danger" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 60%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Orta</div>
